Invalid media query keyword values should not be parsable https://bugs.webkit.org/show_bug.cgi?id=225282

Reviewed by Dean Jackson.

Updated WPT expectations.

LayoutTests/imported/w3c:

* web-platform-tests/css/mediaqueries/prefers-color-scheme-expected.txt:
* web-platform-tests/css/mediaqueries/prefers-reduced-motion-expected.txt:

Source/WebCore:

* css/MediaQueryExpression.cpp:
(WebCore::isValidValueForIdentMediaFeature):
(WebCore::featureWithValidIdent):

Canonical link: https://commits.webkit.org/237352@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@277039 268f45cc-cd09-0410-ab3c-d52691b4dbfc